Updated the front page to reflect my own Resume

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -201,11 +201,11 @@
 
                <div class="twelve columns">
 
-                  <h3>A Cloud Guru</h3>
-                  <p class="info">Associate Community Training Architect <span>&bull;</span> <em class="date">November 2020 - Present</em></p>
+                  <h3>Department of Community Affairs</h3>
+                  <p class="info">Lead Data Analyst <span>&bull;</span> <em class="date">August 2022 - November 2023</em></p>
 
                   <p>
-                  <li>Creating awesome cloud computing content.</li> 
+                  <li>Serve as lead in the development and coordination of technology tools needed to address the needs for the GA HMIS Implementation. Analyze complex statistics and data variables and make public recommendations based on the results. Advanced use of visualization tools such as Power BI and/or Tableau. Skill in using statistical software such as R, including the ability to utilize data to extract meaning from information. Develop and implement databases and data collection systems. Acquire data from primary and secondary sources and maintain data systems. Conduct analysis of HMIS data on key initiatives to identify data trends, establish benchmarks, and identify data quality issues. Lead in statewide data quality initiatives. Interact with internal stakeholders and external stakeholders and assist in potential data strategies to drive the decision-making process. Coordinate with the System Admin team to identify data anomalies and errors and take measures to resolve them. Provide data and analysis as needed to support CoC’s(Continuum of Care), Federal Partners, Internal and External Stakeholders. Present data findings, trends to various audiences.</li> 
                   </p>
 
                </div>
@@ -216,13 +216,12 @@
 
                <div class="twelve columns">
 
-                  <h3>Powwr | A Cognitive Energy Company</h3>
-                  <p class="info">Cloud Engineer <span>&bull;</span> <em class="date">May 2019 - August 2020</em></p>
+                  <h3>Prontotrak Monitoring Solutions</h3>
+                  <p class="info">Application Support Analyst / Junior .NET Developer <span>&bull;</span> <em class="date">September 2021 - August 2022</em></p>
 
                   <p>
-                     <li>Developed cloud native solutions in Azure</li>
-                     <li>CI/CD with Azure DevOps</li>
-                     <li>Full stack .NET development</li>
+                     <li>Manage and Support the Web Portal for ProntoTrak. Assist clients during installs and product support for licensing. Analyze and prototype changes to Web Portal by assisting Senior Developers in quality assurance and testing. Creating portal websites to extend the ProntoTrak SASS platform. Front and Back-End testing of .NET C# applications. WordPress customization and in-house app development. Blazor Application development for a user ID check-in function of the ProntoTrak software suite. During the course of this position I have been creating SQL queries and altering them on the core application we are maintaining, I have to generate scripts directly from the SQL source. I have queried Stored Procedures and Views. I generate results from the Microsoft SQL Management Console to compare it to the SQL being called from the Crystal Reports we are currently using. We are also incorporating the Business Intelligence package from Microsoft for more options. We have been using Crystal Reports 2008, 2012, 2016 and 2020 editions to generate recurring revenue reports for the agencies we work with.</li>
+
                   </p>
 
                </div>
@@ -233,14 +232,12 @@
 
                <div class="twelve columns">
 
-                  <h3>Powwr | A Cognitive Energy Company</h3>
-                  <p class="info">System Administrator <span>&bull;</span> <em class="date">September 2018 - May 2019</em></p>
+                  <h3>SALTO systems</h3>
+                  <p class="info">RMN / Technical Support Specialist <span>&bull;</span> <em class="date">March 2021 - August 2021</em></p>
 
                   <p>
-                  <li>Atlassian suite administration</li>
-                  <li>O365 suite administration</li>
-                  <li>SQL server 2019 administration</li>
-                  <li>Azure infrastructure administration</li>
+                  <li>Technical support for electronic locking systems. Laboratory testing of hardware/electronic components of locks and mechanisms. Preparation of internet connected devices by programming/assignment of IP addresses into hardware. Preparation of Microsoft SQL Server 2019 for Hotels to manage remotely connected locks on doors. Management of locks using proprietary cloud-based security management system called Pro-Access Space. </li>
+
                   </p>
 
                </div>
@@ -251,11 +248,11 @@
 
                <div class="twelve columns">
 
-                  <h3>Tech Boston</h3>
-                  <p class="info">Help Desk Analyst <span>&bull;</span> <em class="date">October 2016 - August 2018</em></p>
+                  <h3>Stratix Corporation</h3>
+                  <p class="info">Technical Supoort Analyst <span>&bull;</span> <em class="date">June 2020 - August 2020</em></p>
 
                   <p>
-                  <li>Front line help desk IT support</li>
+                  <li>Tech support for the American Airlines product line of mobile devices. Mobile Operations Center remote tech support for Flight Attendants, Pilots and AA employees in general. Connecting to tablet devices remotely using the SOTI / AirWatch remote management systems and troubleshooting multiple applications on the device while the user was live. Passcode/Password Identity-portal management and permissions to applications depending on AA employee role. Management of Email and proprietary-applications from Stratix Corp. Process tickets using the Service Now ticket management console and Knowledge-Based systems. Extensive customer service experience.</li>
                   </p>
 
                </div>
@@ -266,11 +263,11 @@
 
                <div class="twelve columns">
 
-                  <h3>Apple Danbury</h3>
-                  <p class="info">Mobile tech <span>&bull;</span> <em class="date">December 2014 - August 2016</em></p>
+                  <h3>US Census Bureau</h3>
+                  <p class="info">Database / Information Specialist<span>&bull;</span> <em class="date">January 2020 - June 2020</em></p>
 
                   <p>
-                  <li>Repaired software and hardware issues related to iOS devices</li>
+                  <li>Managed Census Bureau's employee accounts. Used Remedy ticketing system to create and handle employee's IT issues. Managed issues of employees in 7 Southeastern States for the Decennial Census Program. Monitored the network of various levels of Regional and State offices and their IT-related issues. Active Directory Management/Console to handle logging in to servers and distributing tasks among IT employees. Triaged levels of help desk support. Edited the IntraNet Sharepoint Bulleting Board news for the Decennial Center.</li>
                   
                   </p>
 
